@@ -1,6 +1,7 @@
 Revision history for Crypt-Passphrase
 
 {{$NEXT}}
+          - Normalize passwords before hashing them
 
 0.001     2021-03-07 23:13:38+01:00 Europe/Amsterdam
           Initial release to an unsuspecting world
